Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22832

Massive memory "leak" in QtCreator

XMLWordPrintable

    • b9e79f7852aa46b4ccbcda666f1bf99db0690272 (qt-creator/qt-creator/master)

      I saw a massive memory consumption/leak in QtCreator when loading big projects (e.g. Qt Creator itself)

      Steps to reproduce:

      • Clone QtCreator's srcs
      • Open QtCreator's .pro/.qbs or CMakeLists.txt 
      • Wait until it's done parsing the project
      • Check how much memory qtcreator is using (on my side is using ~800 MB)
      • touch src/plugins/plugins.pro/.qbs/CMakeLists.txt file
      • Wait until it's done parsing the project
      • check again how much memory qtcreator is using. On my side it adds +250MB every time is reparsing the project and the cpp files.

      Also closing the project (right click -> close project) s not freeing the memory.

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            taipan BogDan Vatra
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes